# AI_CODE

./: .replit  pyproject.toml  replit.md  report.json
attached_assets/: Pasted--1-Architecture-Overview-Your-system-is-based-on-modified-AutoGen-with-Groq-GPT-OSS-120B-pri-1757459003000_1757459003002.txt
autogen-ethical-hacker/: README.md  autonomous_main.py  complete_main.py  enhanced_main.py  kali_setup.sh  main.py  report.json  requirements.txt  simple_main.py  test_complete_system.py  test_tools_integration.py
autogen-ethical-hacker/advanced/: blue_team.py  compliance.py  explainability.py  memory.py  multi_agent_chat.py  osint.py  plugin_system.py  roles.py  visualization.py
autogen-ethical-hacker/agents/: agent_factory.py  analysis_agent.py  blue_team_evasion_agent.py  crypto_analysis_agent.py  data_exfiltration_agent.py  executor_agent.py  exploit_agent.py  iot_exploit_agent.py  lateral_movement_agent.py  llm_agentic.py  multi_agent_workflow.py  network_traffic_agent.py  orchestrator_agent.py  payload_generation_agent.py  recon_agent.py  report_agent.py  report_agentic.py  social_engineering_agent.py  steganography_agent.py  threat_intel_agentic.py  vuln_agent.py  webapp_agent.py
autogen-ethical-hacker/config/: apis.json  lab_scope.json  tools_config.json
autogen-ethical-hacker/llm/: enhanced_llm_router.py  llm_complete_wrapper.py  llm_router.py  multi_api_manager.py  simple_llm_router.py
autogen-ethical-hacker/persistence/: audit_logger.py
autogen-ethical-hacker/sandbox/: docker_runner.py
autogen-ethical-hacker/system/: api_quota_manager.py  (+4 more)
(+17 files in other folders)
