[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "openai>=1.107.0",
    "pydantic-core>=2.0,<3.0",
    "pydantic>=2.5.0",
    "python-nmap>=0.7.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "rich>=14.1.0",
    "prompt-toolkit>=3.0.52",
]
